--- a/covid-19_jhu_modeled.ipynb
+++ b/covid-19_jhu_modeled.ipynb
@@ -2,6 +2,241 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_id = \"covid_19_jhu_modeled\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset 'nimble-cortex-266516:covid_19_jhu_modeled' successfully created.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!bq --location=US mk --dataset {dataset_id}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter/venv/lib/python3.5/site-packages/apache_beam/io/gcp/bigquery.py:1421: BeamDeprecationWarning: options is deprecated since First stable release. References to <pipeline>.options will not be supported\n",
+      "  experiments = p.options.view_as(DebugOptions).experiments or []\n",
+      "INFO:apache_beam.runners.direct.direct_runner:Running pipeline with DirectRunner.\n",
+      "INFO:apache_beam.io.gcp.bigquery_tools:Using location 'US' from table <TableReference\n",
+      " datasetId: 'covid_19_jhu_staging'\n",
+      " projectId: 'nimble-cortex-266516'\n",
+      " tableId: 'summary'> referenced by query select * from covid_19_jhu_staging.summary where country_region = \"US\" limit 50\n",
+      "WARNING:apache_beam.io.gcp.bigquery_tools:Dataset nimble-cortex-266516:temp_dataset_d2eb0602d8c4400eb576e89390064551 does not exist so we will create it as temporary with location=US\n",
+      "INFO:apache_beam.io.gcp.bigquery_tools:Created table nimble-cortex-266516.covid_19_jhu_modeled.summary_Beam with schema <TableSchema\n",
+      " fields: [<TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'province'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'state'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'country_region'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'date'\n",
+      " type: 'DATE'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'confirmed'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'deaths'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'recovered'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'active'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'admin2'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'combined_key'\n",
+      " type: 'STRING'>]>. Result: <Table\n",
+      " creationTime: 1589162540507\n",
+      " etag: 'c8Za50PqmXFdaQEc7ssehA=='\n",
+      " id: 'nimble-cortex-266516:covid_19_jhu_modeled.summary_Beam'\n",
+      " kind: 'bigquery#table'\n",
+      " lastModifiedTime: 1589162540547\n",
+      " location: 'US'\n",
+      " numBytes: 0\n",
+      " numLongTermBytes: 0\n",
+      " numRows: 0\n",
+      " schema: <TableSchema\n",
+      " fields: [<TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'province'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'state'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'country_region'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'date'\n",
+      " type: 'DATE'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'confirmed'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'deaths'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'recovered'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'active'\n",
+      " type: 'INTEGER'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'admin2'\n",
+      " type: 'STRING'>, <TableFieldSchema\n",
+      " fields: []\n",
+      " mode: 'NULLABLE'\n",
+      " name: 'combined_key'\n",
+      " type: 'STRING'>]>\n",
+      " selfLink: 'https://www.googleapis.com/bigquery/v2/projects/nimble-cortex-266516/datasets/covid_19_jhu_modeled/tables/summary_Beam'\n",
+      " tableReference: <TableReference\n",
+      " datasetId: 'covid_19_jhu_modeled'\n",
+      " projectId: 'nimble-cortex-266516'\n",
+      " tableId: 'summary_Beam'>\n",
+      " type: 'TABLE'>.\n",
+      "WARNING:apache_beam.io.gcp.bigquery_tools:Sleeping for 150 seconds before the write as BigQuery inserts can be routed to deleted table for 2 mins after the delete and create.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run covid_19_jhu_beam.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:apache_beam.options.pipeline_options:--region not set; will default to us-central1. Future releases of Beam will require the user to set --region explicitly, or else have a default set via the gcloud tool. https://cloud.google.com/compute/docs/regions-zones\n",
+      "/home/jupyter/venv/lib/python3.5/site-packages/apache_beam/runners/dataflow/dataflow_runner.py:740: BeamDeprecationWarning: BigQuerySink is deprecated since 2.11.0. Use WriteToBigQuery instead.\n",
+      "  kms_key=transform.kms_key))\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Starting GCS upload to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/pipeline.pb...\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Completed GCS upload to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/pipeline.pb in 0 seconds.\n",
+      "INFO:apache_beam.runners.portability.stager:Downloading source distribution of the SDK from PyPi\n",
+      "INFO:apache_beam.runners.portability.stager:Executing command: ['/home/jupyter/venv/bin/python', '-m', 'pip', 'download', '--dest', '/tmp/tmp9nh9j0_v', 'apache-beam==2.19.0', '--no-deps', '--no-binary', ':all:']\n",
+      "INFO:apache_beam.runners.portability.stager:Staging SDK sources from PyPI to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/dataflow_python_sdk.tar\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Starting GCS upload to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/dataflow_python_sdk.tar...\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Completed GCS upload to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/dataflow_python_sdk.tar in 0 seconds.\n",
+      "INFO:apache_beam.runners.portability.stager:Downloading binary distribution of the SDK from PyPi\n",
+      "INFO:apache_beam.runners.portability.stager:Executing command: ['/home/jupyter/venv/bin/python', '-m', 'pip', 'download', '--dest', '/tmp/tmp9nh9j0_v', 'apache-beam==2.19.0', '--no-deps', '--only-binary', ':all:', '--python-version', '35', '--implementation', 'cp', '--abi', 'cp35m', '--platform', 'manylinux1_x86_64']\n",
+      "INFO:apache_beam.runners.portability.stager:Staging binary distribution of the SDK from PyPI to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/apache_beam-2.19.0-cp35-cp35m-manylinux1_x86_64.whl\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Starting GCS upload to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/apache_beam-2.19.0-cp35-cp35m-manylinux1_x86_64.whl...\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Completed GCS upload to gs://covid_19_cs327_extracredit-dataflow/staging/separateprovincestate.1589163327.719244/apache_beam-2.19.0-cp35-cp35m-manylinux1_x86_64.whl in 1 seconds.\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Create job: <Job\n",
+      " createTime: '2020-05-11T02:15:33.073778Z'\n",
+      " currentStateTime: '1970-01-01T00:00:00Z'\n",
+      " id: '2020-05-10_19_15_32-1815824503767160033'\n",
+      " location: 'us-central1'\n",
+      " name: 'separateprovincestate'\n",
+      " projectId: 'nimble-cortex-266516'\n",
+      " stageStates: []\n",
+      " startTime: '2020-05-11T02:15:33.073778Z'\n",
+      " steps: []\n",
+      " tempFiles: []\n",
+      " type: TypeValueValuesEnum(JOB_TYPE_BATCH, 1)>\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:Created job with id: [2020-05-10_19_15_32-1815824503767160033]\n",
+      "INFO:apache_beam.runners.dataflow.internal.apiclient:To access the Dataflow monitoring console, please navigate to https://console.cloud.google.com/dataflow/jobsDetail/locations/us-central1/jobs/2020-05-10_19_15_32-1815824503767160033?project=nimble-cortex-266516\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:Job 2020-05-10_19_15_32-1815824503767160033 is in state JOB_STATE_PENDING\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:32.114Z: JOB_MESSAGE_DETAILED: Autoscaling is enabled for job 2020-05-10_19_15_32-1815824503767160033. The number of workers will be between 1 and 1000.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:32.114Z: JOB_MESSAGE_DETAILED: Autoscaling was automatically enabled for job 2020-05-10_19_15_32-1815824503767160033.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:35.509Z: JOB_MESSAGE_DETAILED: Checking permissions granted to controller Service Account.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.021Z: JOB_MESSAGE_BASIC: Worker configuration: n1-standard-4 in us-central1-c.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.573Z: JOB_MESSAGE_DETAILED: Expanding CoGroupByKey operations into optimizable parts.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.604Z: JOB_MESSAGE_DETAILED: Expanding GroupByKey operations into optimizable parts.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.631Z: JOB_MESSAGE_DETAILED: Lifting ValueCombiningMappingFns into MergeBucketsMappingFns\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.652Z: JOB_MESSAGE_DEBUG: Annotating graph with Autotuner information.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.904Z: JOB_MESSAGE_DETAILED: Fusing adjacent ParDo, Read, Write, and Flatten operations\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.939Z: JOB_MESSAGE_DETAILED: Fusing consumer split provinceState into Read from BigQuery\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:36.969Z: JOB_MESSAGE_DETAILED: Fusing consumer Write BQ table/WriteToBigQuery/NativeWrite into split provinceState\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.005Z: JOB_MESSAGE_DEBUG: Workflow config is missing a default resource spec.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.032Z: JOB_MESSAGE_DEBUG: Adding StepResource setup and teardown to workflow graph.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.066Z: JOB_MESSAGE_DEBUG: Adding workflow start and stop steps.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.088Z: JOB_MESSAGE_DEBUG: Assigning stage ids.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.312Z: JOB_MESSAGE_DEBUG: Executing wait step start3\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.383Z: JOB_MESSAGE_BASIC: Executing operation Read from BigQuery+split provinceState+Write BQ table/WriteToBigQuery/NativeWrite\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.432Z: JOB_MESSAGE_DEBUG: Starting worker pool setup.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:37.471Z: JOB_MESSAGE_BASIC: Starting 1 workers in us-central1-c...\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:Job 2020-05-10_19_15_32-1815824503767160033 is in state JOB_STATE_RUNNING\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:15:38.790Z: JOB_MESSAGE_BASIC: BigQuery query issued as job: \"dataflow_job_11239079038865353471\". You can check its status with the bq tool: \"bq show -j --project_id=nimble-cortex-266516 dataflow_job_11239079038865353471\".\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:16:10.460Z: JOB_MESSAGE_DETAILED: Autoscaling: Raised the number of workers to 1 based on the rate of progress in the currently running stage(s).\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:16:48.763Z: JOB_MESSAGE_BASIC: BigQuery query completed, job : \"dataflow_job_11239079038865353471\"\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:16:49.215Z: JOB_MESSAGE_BASIC: BigQuery export job \"dataflow_job_7600923400008441930\" started. You can check its status with the bq tool: \"bq show -j --project_id=nimble-cortex-266516 dataflow_job_7600923400008441930\".\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:17:19.584Z: JOB_MESSAGE_DETAILED: BigQuery export job progress: \"dataflow_job_7600923400008441930\" observed total of 1 exported files thus far.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:17:19.620Z: JOB_MESSAGE_BASIC: BigQuery export job finished: \"dataflow_job_7600923400008441930\"\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:17:28.339Z: JOB_MESSAGE_DETAILED: Workers have started successfully.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:17:28.382Z: JOB_MESSAGE_DETAILED: Workers have started successfully.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:03.331Z: JOB_MESSAGE_BASIC: Executing BigQuery import job \"dataflow_job_11239079038865350657\". You can check its status with the bq tool: \"bq show -j --project_id=nimble-cortex-266516 dataflow_job_11239079038865350657\".\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:13.811Z: JOB_MESSAGE_BASIC: BigQuery import job \"dataflow_job_11239079038865350657\" done.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:14.331Z: JOB_MESSAGE_BASIC: Finished operation Read from BigQuery+split provinceState+Write BQ table/WriteToBigQuery/NativeWrite\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:14.402Z: JOB_MESSAGE_DEBUG: Executing success step success1\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:14.517Z: JOB_MESSAGE_DETAILED: Cleaning up.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:14.764Z: JOB_MESSAGE_DEBUG: Starting worker pool teardown.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:18:14.798Z: JOB_MESSAGE_BASIC: Stopping worker pool...\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:20:15.701Z: JOB_MESSAGE_DETAILED: Autoscaling: Resized worker pool from 1 to 0.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:20:15.748Z: JOB_MESSAGE_BASIC: Worker pool stopped.\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:2020-05-11T02:20:15.785Z: JOB_MESSAGE_DEBUG: Tearing down pending resources...\n",
+      "INFO:apache_beam.runners.dataflow.dataflow_runner:Job 2020-05-10_19_15_32-1815824503767160033 is in state JOB_STATE_DONE\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run covid_19_jhu_beam_dataflow.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -10,9 +245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (beam_venv)",
    "language": "python",
-   "name": "python3"
+   "name": "beam_venv_kernel"
   },
   "language_info": {
    "codemirror_mode": {
