final final commit
fix analysis joins and remove world

--- a/covid-19_analysis.ipynb
+++ b/covid-19_analysis.ipynb
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2299,7 +2299,7 @@
        "[19779 rows x 12 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,14 +2308,14 @@
     "%%bigquery\n",
     "select s.date, w.city, s.province, s.country_region, s.confirmed, s.deaths, s.recovered, s.active, (s.confirmed/w.population*100) as confirmed_per_100, (s.deaths/w.population*100) as deaths_per_100, (s.recovered/w.population*100) as recovered_per_100, (s.active/w.population*100) as active_per_100\n",
     "from nimble-cortex-266516.covid_19_jhu_modeled.summary_Beam_DF s join nimble-cortex-266516.world_cities_staging.world_cities w\n",
-    "on s.admin2 = w.city and s.province = w.admin_name and s.country_region = w.country\n",
+    "on s.admin2 = w.city_ascii and s.province = w.admin_name and s.country_region = w.country\n",
     "where s.country_region = 'United States'\n",
     "order by s.date asc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2352,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,328 +2362,8 @@
     "create or replace view `nimble-cortex-266516.covid_19_views.v_usa_cases_to_population` as\n",
     "select s.date, w.city, s.province, s.country_region, s.confirmed, s.deaths, s.recovered, s.active, (s.confirmed/w.population*100) as confirmed_per_100, (s.deaths/w.population*100) as deaths_per_100, (s.recovered/w.population*100) as recovered_per_100, (s.active/w.population*100) as active_per_100\n",
     "from `nimble-cortex-266516.covid_19_jhu_modeled.summary_Beam_DF` s join `nimble-cortex-266516.world_cities_staging.world_cities` w\n",
-    "on s.admin2 = w.city and s.province = w.admin_name and s.country_region = w.country\n",
+    "on s.admin2 = w.city_ascii and s.province = w.admin_name and s.country_region = w.country\n",
     "where s.country_region = 'United States'\n",
-    "order by s.date asc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>city</th>\n",
-       "      <th>province</th>\n",
-       "      <th>country_region</th>\n",
-       "      <th>confirmed</th>\n",
-       "      <th>deaths</th>\n",
-       "      <th>recovered</th>\n",
-       "      <th>active</th>\n",
-       "      <th>confirmed_per_100</th>\n",
-       "      <th>deaths_per_100</th>\n",
-       "      <th>recovered_per_100</th>\n",
-       "      <th>active_per_100</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Orleans</td>\n",
-       "      <td>Louisiana</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>451</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>436</td>\n",
-       "      <td>7.739832</td>\n",
-       "      <td>0.257422</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.482409</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>King</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>1040</td>\n",
-       "      <td>75</td>\n",
-       "      <td>0</td>\n",
-       "      <td>965</td>\n",
-       "      <td>15.063731</td>\n",
-       "      <td>1.086327</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.977404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Douglas</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.515062</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.515062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Douglas</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.200754</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.200754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Douglas</td>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.236390</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.236390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210446</th>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>Harrison</td>\n",
-       "      <td>Indiana</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>153</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>142</td>\n",
-       "      <td>1.037992</td>\n",
-       "      <td>0.074627</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.963365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210447</th>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>Harrison</td>\n",
-       "      <td>Indiana</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>153</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>142</td>\n",
-       "      <td>0.535208</td>\n",
-       "      <td>0.038479</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.496729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210448</th>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>Harrison</td>\n",
-       "      <td>Indiana</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>153</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>142</td>\n",
-       "      <td>2.060051</td>\n",
-       "      <td>0.148108</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.911943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210449</th>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>Harrison</td>\n",
-       "      <td>Indiana</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>153</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>142</td>\n",
-       "      <td>1.539081</td>\n",
-       "      <td>0.110653</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.428428</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210450</th>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>Harrison</td>\n",
-       "      <td>Indiana</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>153</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>142</td>\n",
-       "      <td>0.867199</td>\n",
-       "      <td>0.062348</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.804852</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>210451 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              date      city    province country_region  confirmed  deaths  \\\n",
-       "0       2020-03-22   Orleans   Louisiana  United States        451      15   \n",
-       "1       2020-03-22      King  Washington  United States       1040      75   \n",
-       "2       2020-03-22   Douglas    Colorado  United States         33       0   \n",
-       "3       2020-03-22   Douglas    Colorado  United States         33       0   \n",
-       "4       2020-03-22   Douglas    Colorado  United States         33       0   \n",
-       "...            ...       ...         ...            ...        ...     ...   \n",
-       "210446  2020-05-08  Harrison     Indiana  United States        153      11   \n",
-       "210447  2020-05-08  Harrison     Indiana  United States        153      11   \n",
-       "210448  2020-05-08  Harrison     Indiana  United States        153      11   \n",
-       "210449  2020-05-08  Harrison     Indiana  United States        153      11   \n",
-       "210450  2020-05-08  Harrison     Indiana  United States        153      11   \n",
-       "\n",
-       "        recovered  active  confirmed_per_100  deaths_per_100  \\\n",
-       "0               0     436           7.739832        0.257422   \n",
-       "1               0     965          15.063731        1.086327   \n",
-       "2               0      33           0.515062        0.000000   \n",
-       "3               0      33           0.200754        0.000000   \n",
-       "4               0      33           0.236390        0.000000   \n",
-       "...           ...     ...                ...             ...   \n",
-       "210446          0     142           1.037992        0.074627   \n",
-       "210447          0     142           0.535208        0.038479   \n",
-       "210448          0     142           2.060051        0.148108   \n",
-       "210449          0     142           1.539081        0.110653   \n",
-       "210450          0     142           0.867199        0.062348   \n",
-       "\n",
-       "        recovered_per_100  active_per_100  \n",
-       "0                     0.0        7.482409  \n",
-       "1                     0.0       13.977404  \n",
-       "2                     0.0        0.515062  \n",
-       "3                     0.0        0.200754  \n",
-       "4                     0.0        0.236390  \n",
-       "...                   ...             ...  \n",
-       "210446                0.0        0.963365  \n",
-       "210447                0.0        0.496729  \n",
-       "210448                0.0        1.911943  \n",
-       "210449                0.0        1.428428  \n",
-       "210450                0.0        0.804852  \n",
-       "\n",
-       "[210451 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%bigquery\n",
-    "select s.date, w.city, s.province, s.country_region, s.confirmed, s.deaths, s.recovered, s.active, (s.confirmed/w.population*100) as confirmed_per_100, (s.deaths/w.population*100) as deaths_per_100, (s.recovered/w.population*100) as recovered_per_100, (s.active/w.population*100) as active_per_100\n",
-    "from nimble-cortex-266516.covid_19_jhu_modeled.summary_Beam_DF s join nimble-cortex-266516.world_cities_staging.world_cities w\n",
-    "on s.admin2 = w.city and s.country_region = w.country\n",
-    "order by s.date asc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%bigquery\n",
-    "create or replace view `nimble-cortex-266516.covid_19_views.v_world_cases_to_population` as\n",
-    "select s.date, w.city, s.province, s.country_region, s.confirmed, s.deaths, s.recovered, s.active, (s.confirmed/w.population*100) as confirmed_per_100, (s.deaths/w.population*100) as deaths_per_100, (s.recovered/w.population*100) as recovered_per_100, (s.active/w.population*100) as active_per_100\n",
-    "from `nimble-cortex-266516.covid_19_jhu_modeled.summary_Beam_DF` s join `nimble-cortex-266516.world_cities_staging.world_cities` w\n",
-    "on s.admin2 = w.city and s.country_region = w.country\n",
     "order by s.date asc"
    ]
   },
